refactor: userid가 null인 경우 예외처리, 예외 필터 분리