@@ -4,9 +4,11 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import kr.flint.auth.jwt.JwtProvider;
+import kr.flint.auth.exception.AuthErrorCode;
+import kr.flint.auth.exception.AuthException;
 import kr.flint.auth.jwt.AccessTokenBlacklist;
-import kr.flint.shared.exception.GeneralException;
+import kr.flint.auth.jwt.AccessTokenClaims;
+import kr.flint.auth.jwt.JwtProvider;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpHeaders;
@@ -37,33 +39,22 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         String token = jwtProvider.extractToken(request.getHeader(HttpHeaders.AUTHORIZATION));
 
         if (token != null) {
-            try {
-                // Blacklist 체크
-                if (accessTokenBlacklist.isBlacklisted(token)) {
-                    log.debug("Blacklisted token detected");
-                    // 인증 없이 계속 진행 (인증 필요한 엔드포인트는 403)
-                    filterChain.doFilter(request, response);
-                    return;
-                }
+            if (accessTokenBlacklist.isBlacklisted(token)) {
+                throw new AuthException(AuthErrorCode.TOKEN_BLACKLISTED);
+            }
 
-                if (jwtProvider.isAccessToken(token)) {
-                    Long userId = jwtProvider.getUserId(token);
-                    String role = jwtProvider.getRole(token);
+            AccessTokenClaims claims = jwtProvider.parseAccessToken(token);
 
-                    UserPrincipal principal = new UserPrincipal(userId, role);
-                    List<SimpleGrantedAuthority> authorities = role != null
-                            ? List.of(new SimpleGrantedAuthority("ROLE_" + role))
-                            : Collections.emptyList();
+            if (claims != null && claims.isValid()) {
+                UserPrincipal principal = new UserPrincipal(claims.userId(), claims.role());
+                List<SimpleGrantedAuthority> authorities = claims.role() != null
+                        ? List.of(new SimpleGrantedAuthority("ROLE_" + claims.role()))
+                        : Collections.emptyList();
 
-                    UsernamePasswordAuthenticationToken authentication =
-                            new UsernamePasswordAuthenticationToken(principal, null, authorities);
+                UsernamePasswordAuthenticationToken authentication =
+                        new UsernamePasswordAuthenticationToken(principal, null, authorities);
 
-                    SecurityContextHolder.getContext().setAuthentication(authentication);
-                }
-            } catch (GeneralException e) {
-                log.debug("JWT 인증 실패: {}", e.getMessage());
-                // 인증 실패 시 SecurityContext를 비워두고 계속 진행
-                // Public 엔드포인트는 통과하고, 인증이 필요한 엔드포인트는 403 반환
+                SecurityContextHolder.getContext().setAuthentication(authentication);
             }
         }
 
